Mobile adjustments and deployment

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-<h1 class="text-center py-5">About Us</h1>
+<h1 class="text-center about-header py-lg-5">About Us</h1>
 <div class="container">
     <div class="row">
       <div class="col-lg-5 col-12">
