--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,7 @@
 
         <!-- Stripe -->
         <script src="https://js.stripe.com/v3/"></script>
+        <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/77148d658e9a1b4ac6b525863/1f17f323ebe1d8c5940edbb41.js");</script>
     {% endblock %}
 
     {% block extra_js %}
