Add styling to 404 page

--- a/templates/404.html
+++ b/templates/404.html
@@ -10,7 +10,8 @@
 {% endblock %}
 
 {% block content %}
-<h3>Sorry that page cannot be found</h3>
+<h3 class="text-center m-5 pt-3 font-weight-bold display-4">404: Page not Found</h3>
+<p class="mx-5 pb-5 text-center">Sorry, Galileo. This page is no moon of Jupiter waiting to be discovered. Try using the search bar above (the modern telescope, if you will), or alternatively...</p>
 
 <div class="col-12 home-content-buttons">
     <h4 class="text-center">
