--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_head %}
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/77148d658e9a1b4ac6b525863/1f17f323ebe1d8c5940edbb41.js");</script>
+{% endblock %}
+
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
