Add Mailchimp form to footer and remove poorly placed mailchimp form from about us page

--- a/templates/base.html
+++ b/templates/base.html
@@ -140,9 +140,58 @@
                 <p class="text-white font-georgian">Helping Students Achieve their Dreams</p>
             </div>
             <div class="col-8 col-md-4">
-                <h4 class="text-white font-display thin logo-font">Overview</h4>
-                <a href="{% url 'account_signup' %}" class="footer-link text-white">Register</a><br>
-                <a href="{% url 'account_login' %}" class="footer-link text-white">Sign In</a>
+                <!-- This form came from Mailchimp and has been modified to meet the needs of this project -->
+                <div id="mc_embed_shell">
+                    <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+                    <style type="text/css">
+                        #mc_embed_signup {
+                            background: #343a3f;
+                            clear: left;
+                            color: white;
+                            max-height: 150px;
+                        }
+                    </style>
+                    <div id="mc_embed_signup">
+                        <form
+                            action="https://gmail.us21.list-manage.com/subscribe/post?u=77148d658e9a1b4ac6b525863&amp;id=ee0e4dc50d&amp;f_id=000053e1f0"
+                            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate m-0"
+                            target="_blank">
+                            <div id="mc_embed_signup_scroll">
+                                <h2 class="text-white font-display thin logo-font mt-0 font-weight-light">Subscribe</h2>
+                                <div class="row">
+                                    <div class="mc-field-group col-8 pb-0"><input type="email" name="EMAIL"
+                                            class="required email px-0 form-control form-control-sm" id="mce-EMAIL"
+                                            placeholder="Email" required="" value="" style="
+                                padding-top: 8px;
+                                padding-bottom: 8px;
+                            "></div>
+            
+                                    <div class="clear foot col-4 p-0 form-control-sm">
+                                        <input type="submit" name="subscribe" id="mc-embedded-subscribe"
+                                            class="button form-control form-control-sm input-sm px-2 m-0 bg-pink" value="Subscribe">
+            
+                                    </div>
+                                </div>
+                                <div id="mce-responses" class="clear foot">
+                                    <div class="response" id="mce-error-response" style="display: none;"></div>
+                                    <div class="response" id="mce-success-response" style="display: none;"></div>
+                                </div>
+            
+            
+                                <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                                    /* real people should not fill this in and expect good things - do not remove this or risk form
+                                    bot signups */
+                                    <input type="text" name="b_77148d658e9a1b4ac6b525863_ee0e4dc50d" tabindex="-1" value="">
+                                </div>
+                                <div class="optionalParent">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+                    <script
+                        type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = EMAIL; ftypes[0] = merge;, fnames[1] = FNAME; ftypes[1] = merge;, fnames[2] = LNAME; ftypes[2] = merge;, fnames[3] = ADDRESS; ftypes[3] = merge;, fnames[4] = PHONE; ftypes[4] = merge;, fnames[5] = BIRTHDAY; ftypes[5] = merge; false }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+                </div>            
             </div>
             <div class="col-8 col-md-4">
                 <h4 class="text-white font-display thin logo-font">Socials </h4>
