--- a/templates/base.html
+++ b/templates/base.html
@@ -173,8 +173,8 @@
                                     </div>
                                 </div>
                                 <div id="mce-responses" class="clear foot">
-                                    <div class="response" id="mce-error-response" style="display: none;"></div>
-                                    <div class="response" id="mce-success-response" style="display: none;"></div>
+                                    <div class="response m-0 p-0 text-pink font-weight-light small" id="mce-error-response" style="display: none;"></div>
+                                    <div class="response m-0 p-0 text-green font-weight-light small" id="mce-success-response" style="display: none;"></div>
                                 </div>
             
             
