--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,7 @@
         <div id="topnav" class="row pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                    <div id="logo-image"></div>
                     <h2 class="logo-font text-black my-0">Markscheme</h2>
                 </a>
             </div>
