Add updates model and views and form to accompany it

--- a/products/templates/products/edit_digital_product.html
+++ b/products/templates/products/edit_digital_product.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <hr>
-                <h2 class="logo-font mb-4">Edit a Digital Product</h2>
+                <h2 class="logo-font mb-4">Edit {{ product.name }}</h2>
                 <hr>
             </div>
         </div>
@@ -25,7 +25,11 @@
                 {{ form.media }}
                 <form method="POST" action="{% url 'edit_digital_product' product.slug %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {{ form | crispy }}
+                    {{ product_form | crispy }}
+                    <p class="logo-font h4 pt-5">Reason for Updating Form</p>
+                    <hr>
+                    <p>It's important to explain why you are updating this product </p>
+                    {{ update_form | crispy }}
                     <div class="text-right mb-4 pt-2">
                         <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
                         <button class="btn btn-black rounded-0" type="submit">Update Digital Product</button>
