--- a/products/templates/products/edit_digital_product.html
+++ b/products/templates/products/edit_digital_product.html
@@ -22,7 +22,7 @@
 
         <div class="row">
             <div class="col-12 col-md-6">
-                {{ form.media }}
+                {{ product_form.media }}
                 <form method="POST" action="{% url 'edit_digital_product' product.slug %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ product_form | crispy }}
