--- a/products/templates/products/edit_workshop.html
+++ b/products/templates/products/edit_workshop.html
@@ -22,10 +22,14 @@
 
         <div class="row">
             <div class="col-12 col-md-6">
-                {{ form.media }}
+                {{ product_form.media }}
                 <form method="POST" action="{% url 'edit_workshop' product.slug %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {{ form | crispy }}
+                    {{ product_form | crispy }}
+                    <p class="logo-font h4 pt-5">Reason for Updating Form</p>
+                    <hr>
+                    <p>It's important to explain why you are updating this product </p>
+                    {{ update_form | crispy }}
                     <div class="text-right mb-4 pt-2">
                         <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
                         <button class="btn btn-black rounded-0" type="submit">Update Product</button>
