--- a/products/templates/products/digital_product_detail.html
+++ b/products/templates/products/digital_product_detail.html
@@ -56,13 +56,6 @@
                     <p class="font-georgia font-weight-bold mt-5 mb-2 text-uppercase">Description:</p>
                     <hr class="m-0">
                     <p class="font-georgia">{{ digital_product.description }}</p>
-                    
-                    {% for item in workshops_i_teach %}
-                    <button class="accordion rounded mt-2"> {{item.created_on|date}} – {{ item.subject }} </button>
-                    <div class="panel rounded">
-                        <p> {{ item.update_description }} </p>
-                    </div>
-                    {% endfor %}
                     <form class="form" action="{% url 'add_to_bag' digital_product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
@@ -103,6 +96,18 @@
             </div>
         </div>
     </div>
+    {% if productupdates %}
+    <div class="col-lg-8 mx-auto mb-5">
+        <p class="font-georgia font-weight-bold text-uppercase mt-4 mb-2 text-center">Product Updates: </p>
+        <hr>
+        {% for item in productupdates %}
+        <button class="accordion rounded mt-2"> {{item.created_on|date}} – {{ item.subject }} </button>
+        <div class="panel rounded">
+            <p class="mt-3"> {{ item.update_description }} </p>
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
 {% endblock %}
 
 {% block postloadjs %}
