--- a/products/templates/products/workshop_detail.html
+++ b/products/templates/products/workshop_detail.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% load mathfilters %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}">
+{% endblock %}
+
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -98,4 +102,21 @@
             </div>
         </div>
     </div>
+    {% if productupdates %}
+    <div class="col-lg-8 mx-auto mb-5">
+        <p class="font-georgia font-weight-bold text-uppercase mt-4 mb-2 text-center">Product Updates: </p>
+        <hr>
+        {% for item in productupdates %}
+        <button class="accordion rounded mt-2"> {{item.created_on|date}} – {{ item.subject }} </button>
+        <div class="panel rounded">
+            <p class="mt-3"> {{ item.update_description }} </p>
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
 {% endblock %}
