--- a/products/templates/products/digital_product_detail.html
+++ b/products/templates/products/digital_product_detail.html
@@ -101,10 +101,12 @@
         <p class="font-georgia font-weight-bold text-uppercase mt-4 mb-2 text-center">Product Updates: </p>
         <hr>
         {% for item in productupdates %}
+        {% if item.major_update == True %}
         <button class="accordion rounded mt-2"> {{item.created_on|date}} – {{ item.subject }} </button>
         <div class="panel rounded">
             <p class="mt-3"> {{ item.update_description }} </p>
         </div>
+        {% endif %}
         {% endfor %}
     </div>
     {% endif %}
