Start debug of file download not working

--- a/products/templates/products/digital_product_detail.html
+++ b/products/templates/products/digital_product_detail.html
@@ -96,6 +96,10 @@
             </div>
         </div>
     </div>
+
+    <a class="text-blue font-italic mx-auto" href="{{ filelink }}" download="{{ filelink }}">Click here to download your file</a>
+
+    <p class="mx-auto mt-3">{{ digital_product.file }} </p>
     {% if productupdates %}
     <div class="col-lg-8 mx-auto mb-5">
         <p class="font-georgia font-weight-bold text-uppercase mt-4 mb-2 text-center">Product Updates: </p>
