Try making download link open in new page

--- a/products/templates/products/digital_product_detail.html
+++ b/products/templates/products/digital_product_detail.html
@@ -97,7 +97,7 @@
         </div>
     </div>
 
-    <a class="text-blue font-italic mx-auto" href="{{ filelink }}" download="{{ filelink }}">Click here to download your file</a>
+    <a class="text-blue font-italic mx-auto" href="{{ filelink }}" download="{{ filelink }}" target="_blank">Click here to download your file</a>
 
     <p class="mx-auto mt-3">{{ digital_product.file }} </p>
     {% if productupdates %}
