Fix html syntax issue in base templates

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,7 @@
 
 {% block content %}
     <div id="home-content-container" >
-        <div id="" class="container h-100">
+        <div class="container h-100">
             <div id="home-row-1" class="row">
                 <div class="col-12 col-lg-4" >
                     <h1 id="home-title" class=" text-left text-black thin my-auto">Welcome to<br><span class="text-big thin font-playfair logo-font">Markscheme</span></h1>
