--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,25 +1,25 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item">
-            <a class="logo-font nav-link text-black mr-5" href="{% url 'home' %}" id="all-products-link"  aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link text-black mr-5" href="{% url 'home' %}" aria-haspopup="true" aria-expanded="false">
                 Home
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="logo-font nav-link text-black mr-5" href="{% url 'about' %}" id="clothing-link"  aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link text-black mr-5" href="{% url 'about' %}" aria-haspopup="true" aria-expanded="false">
                 About
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="logo-font nav-link text-black mr-5" href="{% url 'workshops' %}" id="clothing-link"  aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link text-black mr-5" href="{% url 'workshops' %}" aria-haspopup="true" aria-expanded="false">
                 Workshops
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="logo-font nav-link text-black mr-5" href="{% url 'digital_products' %}" id="clothing-link"  aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link text-black mr-5" href="{% url 'digital_products' %}" aria-haspopup="true" aria-expanded="false">
                 Digital Products
             </a>
         </li>
