--- a/products/templates/products/workshop_detail.html
+++ b/products/templates/products/workshop_detail.html
@@ -46,8 +46,9 @@
                         {% else %}
                         <span class="font-weight-bold">Instructors:</span>
                         {% endif %}
+                        <span>
                             {% for instructor in workshop.host_creators.all %}
-                                <span>{{ instructor.first_name }} {{ instructor.last_name }}{% if forloop.counter < workshop.host_creators.count|add:"-1"  %},
+                                {{ instructor.first_name }} {{ instructor.last_name }}{% if forloop.counter < workshop.host_creators.count|add:"-1"  %},
                                 {% elif forloop.counter == workshop.host_creators.count|add:"-1" %}
                                 and
                                 {% endif %}
@@ -143,5 +144,5 @@
 
 {% block postloadjs %}
     {{ block.super }}
-    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
+    <script src="{% static 'profiles/js/countryfield.js' %}"></script>
 {% endblock %}
